--- a/type_A/resources/css/global.css
+++ b/type_A/resources/css/global.css
@@ -143,6 +143,9 @@ header .util .museum span{font-size: 16px;}
 .gnb .gnb_wrap .bt_menu ul:after{content: ''; display: block; visibility: hidden; clear: both;}
 .gnb .gnb_wrap .bt_menu ul li{float: left; margin-right: 40px;}
 
+footer{width: 100%;}
+footer img{width: 100%;}
+
 @media screen and (min-width:2560px){
     .gnb .gnb_wrap{padding:0 320px;}
     .gnb .gnb_wrap .nav{top: 30%;}
