--- a/type_A/resources/css/main.css
+++ b/type_A/resources/css/main.css
@@ -1,4 +1,6 @@
 main{width: 100%; max-width: 1920px; margin: 0 auto;}
+.fl{float: left;}
+.fr{float: right;}
 
 .main_vsl{width: 100%; max-width: 1920px; height: 1000px;}
 .main_vsl .swiper-container{width: 100%; height: 100%; position: relative;}
@@ -90,10 +92,109 @@ main{width: 100%; max-width: 1920px; margin: 0 auto;}
 .future .tit:after{content: ''; display: block; width: 1px; height: 120px; margin:50px auto 0; background-color: #000;}
 .future .tit h2{margin-bottom: 30px; font-size: 48px; font-weight: 700; line-height: 1; letter-spacing: 3px; color: #000;}
 .future .tit p{font-size: 18px; font-weight: 700; line-height: 1; color: #000;}
-
 .future .desc{width: 100%; text-align: center; font-size: 16px; font-weight: 400; line-height: 1.8; color: #000;}
-/* future Fin */
 
+.fslide{width: 100%; max-width: 1920px; height: 500px; margin: 0 auto; position: relative; overflow: hidden;}
+.fslide .inner{max-width: 100%; height: 100%;}
+.fslide .inner .desc{width: 1130px; height: 100%; margin: 0 auto; position: relative;}
+.fslide .inner .desc .sec{position: absolute; top: 50%; transform: translate(0, -50%); -webkit-transform: translate(0, -50%); -ms-transform: translate(0, -50%); z-index: 5; display: block;}
+.fslide .inner .desc .sec dl{color: #fff;}
+.fslide .inner .desc .sec dl dt{font-size: 40px; font-weight: 700; line-height: 1; margin-bottom: 35px;}
+.fslide .inner .desc .sec dl dd{font-size: 16px; font-weight: 400; line-height: 1.8;}
+.fslide .inner .desc .sec dl dd.more_btn{margin-top: 40px;}
+.fslide .inner .desc .sec dl dd.more_btn a{display: inline-block;}
+
+
+.fslide01 .inner .bcg{position: absolute; width: 100%; height: 100%; background: url('../images/futre_fslide_01_bg.png')no-repeat center 0; background-size: cover;}
+.fslide01 .inner .desc .sec{left: 0;}
+
+.fslide02 .inner .bcg{position: absolute; width: 100%; height: 100%; background: url('../images/futre_fslide_02_bg.png')no-repeat center 0; background-size: cover;}
+.fslide02 .inner .desc .sec{right: 0;}
+
+.fslide03 .inner .bcg{position: absolute; width: 100%; height: 100%; background: url('../images/futre_fslide_03_bg.png')no-repeat center 0; background-size: cover;}
+.fslide03 .inner .desc .sec{left: 0;}
+.fslide03 .inner .desc .sec dl dt{line-height: 1.4;}
+/* future fslide Fin */
+
+/* tech Start */
+.tech{width: 100%; padding: 280px 0 36px;}
+.tech .tit{width: 100%; margin-bottom: 65px; display: block; text-align: center;}
+.tech .tit:after{content: ''; display: block; width: 1px; height: 120px; margin:50px auto 0; background-color: #000;}
+.tech .tit h2{margin-bottom: 30px; font-size: 48px; font-weight: 700; line-height: 1; letter-spacing: 3px; color: #000;}
+.tech .tit p{font-size: 18px; font-weight: 700; line-height: 1; color: #000;}
+.tech .desc{width: 100%; text-align: center; font-size: 16px; font-weight: 400; line-height: 1.8; color: #000;}
+
+.tech_cont{width: 100%; height: 1000px;}
+.tech_cont ul{display: block; width: 100%; height: 100%;}
+.tech_cont ul:after{content: ''; display: block; visibility: hidden; clear: both;}
+.tech_cont ul li{width:33.33%; height: 100%; float: left; box-sizing: border-box; border-right: 1px solid #fff; position: relative; overflow: hidden;}
+.tech_cont ul li:last-child{border-right: none;}
+.tech_cont ul li .bcg{position: absolute; width: 100%; height: 100%; left: 0; top: 0; z-index: -1; background-size: cover; transition: transform 0.35s ease-in-out;}
+.tech_cont ul li .dim{width: 100%; height: 100%; opacity: 0; position: absolute; left: 0; top: 0; z-index: 0; background-color: rgba(0 , 0, 0, 0.5); transition: opacity 0.35s ease-in-out;}
+.tech_cont ul li:hover .bcg{transform: scale(1.1);}
+.tech_cont ul li:hover .dim{opacity: 1;}
+.tech_cont ul li.cont_01 .bcg{background: url('../images/tech_cont_01_bg.png')no-repeat center 0;}
+.tech_cont ul li.cont_02 .bcg{background: url('../images/tech_cont_02_bg.png')no-repeat center 0;}
+.tech_cont ul li.cont_03 .bcg{background: url('../images/tech_cont_03_bg.png')no-repeat center 0;}
+
+.tech_cont ul li .tit{width: 100%; height: 100%; position: relative;}
+.tech_cont ul li .tit h2{
+    display: inline-block; padding: 0 0 0 120px; 
+    position: absolute; top: 50%; left: 0; z-index: 1;
+    -webkit-transform: translate(0, -75%);
+    -ms-transform: translate(0, -75%);
+    transform: translate(0, -75%);
+    font-size: 60px; font-weight: 300; line-height: 1; color:#fff;
+}
+
+.about{width: 100%; max-width: 1920px; padding: 35px 0 145px;}
+.about .inner{width: 100%; height: 100%;}
+.about .inner:after{content: ''; display: block; visibility: hidden; clear: both;}
+
+.about .inner .la{width: 50%; padding: 0 0 0 180px;}
+
+.about .inner .la .desc{width: 100%; padding: 260px 0 0 100px; color: #000;}
+.about .inner .la .desc h2{font-size: 18px; font-weight: 700; line-height: 1}
+.about .inner .la .desc dl{display: block; margin: 30px 0;}
+.about .inner .la .desc dl dt{font-size: 40px; font-weight: 700; line-height: 1.4; margin-bottom: 30px;}
+.about .inner .la .desc dl dd{font-size: 16px; font-weight: 400; line-height: 1.6;}
+.about .inner .la .desc > a{display: inline-block;} 
+
+.about .inner .la .sl_wrap{width: 100%; margin-top: 160px;}
+.about .inner .la .sl_wrap > h2{display: inline-block; font-size: 30px; font-weight: 700; line-height: 1; margin-bottom:30px;}
+.about .inner .la .sl_wrap .swiper-container{width: 100%; height: 1060px;}
+.about .inner .la .sl_wrap .swiper-slide{width: auto; height: auto;}
+.about .inner .la .sl_wrap .swiper-slide ul{width: 100%; height: 100%; display: block;}
+.about .inner .la .sl_wrap .swiper-slide ul:after{content: ''; display: block; visibility: hidden; clear: both;}
+
+.about .inner .la .sl_wrap .swiper-slide ul li{float: left; position: relative; opacity:0; transition: opacity 0.3s ease-in;}
+
+.about .inner .la .sl_wrap .swiper-slide ul li:nth-child(odd){margin-right: 20px;}
+.about .inner .la .sl_wrap .swiper-slide ul li:nth-child(even){margin-bottom: 20px;}
+
+.about .inner .la .sl_wrap .swiper-slide-active ul li{opacity: 1; transition: opacity 0.35s ease-in;}
+.about .inner .la .sl_wrap .swiper-slide-active ul li:nth-child(2){transition-delay: 0.3s;}
+.about .inner .la .sl_wrap .swiper-slide-active ul li:nth-child(3){transition-delay: 0.45s;}
+.about .inner .la .sl_wrap .swiper-slide-active ul li:nth-child(4){transition-delay: 0.6s;}
+
+.about .inner .la .sl_wrap .swiper-slide ul li:nth-child(3){transform: translate(0, -140px);}
+
+.about .inner .la .sl_wrap .swiper-slide ul li .tit{padding: 0 0 70px 40px; position: absolute; left: 0; bottom: 0; z-index: 5;}
+
+
+
+
+.about .inner .ra{width: 50%;}
+
+.about .inner .ra .visual{width: 100%; position: relative; text-align: right;}
+.about .inner .ra .visual .ceo{
+    position: absolute; top: 0; left: 0; z-index: 5;
+    transform: translate(120px ,110px);
+}
+.about .inner .ra .visual .paging{
+    position: absolute; bottom: 0; right: 0; z-index: 10;
+    transform: translate(0, 190px);
+}
 
 
 /* animation keyframes */
