--- a/type_A/resources/css/main.css
+++ b/type_A/resources/css/main.css
@@ -71,8 +71,8 @@ main{width: 100%; max-width: 1920px; margin: 0 auto;}
     margin: auto;
 }
 .main_vsl .scrollBtn .mouse:before {
-    width: 32px;
-    height: 55px;
+    width: 20px;
+    height: 40px;
     background-color: #222a30;
     opacity: .1;
     border-radius: 100px;
@@ -105,13 +105,13 @@ main{width: 100%; max-width: 1920px; margin: 0 auto;}
 .fslide .inner .desc .sec dl dd.more_btn a{display: inline-block;}
 
 
-.fslide01 .inner .bcg{position: absolute; width: 100%; height: 100%; background: url('../images/futre_fslide_01_bg.png')no-repeat center 0; background-size: cover;}
+.fslide01 .inner .bcg1{position: absolute; width: 100%; height: 100%; background: url('../images/futre_fslide_01_bg.png')no-repeat center 0; background-size: cover;}
 .fslide01 .inner .desc .sec{left: 0;}
 
-.fslide02 .inner .bcg{position: absolute; width: 100%; height: 100%; background: url('../images/futre_fslide_02_bg.png')no-repeat center 0; background-size: cover;}
+.fslide02 .inner .bcg1{position: absolute; width: 100%; height: 100%; background: url('../images/futre_fslide_02_bg.png')no-repeat center 0; background-size: cover;}
 .fslide02 .inner .desc .sec{right: 0;}
 
-.fslide03 .inner .bcg{position: absolute; width: 100%; height: 100%; background: url('../images/futre_fslide_03_bg.png')no-repeat center 0; background-size: cover;}
+.fslide03 .inner .bcg1{position: absolute; width: 100%; height: 100%; background: url('../images/futre_fslide_03_bg.png')no-repeat center 0; background-size: cover;}
 .fslide03 .inner .desc .sec{left: 0;}
 .fslide03 .inner .desc .sec dl dt{line-height: 1.4;}
 /* future fslide Fin */
@@ -147,7 +147,7 @@ main{width: 100%; max-width: 1920px; margin: 0 auto;}
     font-size: 60px; font-weight: 300; line-height: 1; color:#fff;
 }
 
-.about{width: 100%; max-width: 1920px; padding: 35px 0 145px;}
+.about{width: 100%; max-width: 1920px; padding: 35px 0 75px;}
 .about .inner{width: 100%; height: 100%;}
 .about .inner:after{content: ''; display: block; visibility: hidden; clear: both;}
 
@@ -160,8 +160,33 @@ main{width: 100%; max-width: 1920px; margin: 0 auto;}
 .about .inner .la .desc dl dd{font-size: 16px; font-weight: 400; line-height: 1.6;}
 .about .inner .la .desc > a{display: inline-block;} 
 
-.about .inner .la .sl_wrap{width: 100%; margin-top: 160px;}
+.about .inner .la .visual{width: 100%; margin-top: 160px;}
+
+.about .inner .la .visual a{display: inline-block; width: 100%;}
+.about .inner .la .visual a h2{display: block; font-size: 30px; font-weight: 700; line-height: 1; margin-bottom:30px;}
+.about .inner .la .visual a h2:after{content: url('../images/right_arrow.png'); width: auto; height: auto; margin-left: 550px; display: inline-block;}
+
+.about .inner .la .visual ul{width: 100%; height: 100%; display: block;}
+.about .inner .la .visual ul:after{content: ''; display: block; visibility: hidden; clear: both;}
+
+.about .inner .la .visual ul li{float: left; position: relative; overflow: hidden;}
+.about .inner .la .visual ul li:nth-child(odd){margin-right: 20px;}
+.about .inner .la .visual ul li:nth-child(even){margin-bottom: 20px;}
+.about .inner .la .visual ul li:nth-child(3){transform: translate(0, -140px);}
+
+.about .inner .la .visual ul li .bcg{ transition: 0.35s ease-in-out;}
+.about .inner .la .visual ul li:hover .bcg{transform: scale(1.1);}
+
+.about .inner .la .visual ul li .tit{padding: 0 0 70px 40px; position: absolute; left: 0; bottom: 0; z-index: 5;}
+.about .inner .la .visual ul li .dim{
+    position: absolute; left: 0; top: 0; z-index: 4; opacity: 0; 
+    width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); transition: 0.35s ease-in-out;
+}
+.about .inner .la .visual ul li:hover .dim{opacity: 1;}
+
+/* .about .inner .la .sl_wrap{width: 100%; margin-top: 160px;}
 .about .inner .la .sl_wrap > h2{display: inline-block; font-size: 30px; font-weight: 700; line-height: 1; margin-bottom:30px;}
+.about .inner .la .sl_wrap > h2:after{content: url('../images/right_arrow.png'); width: auto; height: auto; margin-left: 550px; display: inline-block;}
 .about .inner .la .sl_wrap .swiper-container{width: 100%; height: 1060px;}
 .about .inner .la .sl_wrap .swiper-slide{width: auto; height: auto;}
 .about .inner .la .sl_wrap .swiper-slide ul{width: 100%; height: 100%; display: block;}
@@ -179,22 +204,279 @@ main{width: 100%; max-width: 1920px; margin: 0 auto;}
 
 .about .inner .la .sl_wrap .swiper-slide ul li:nth-child(3){transform: translate(0, -140px);}
 
-.about .inner .la .sl_wrap .swiper-slide ul li .tit{padding: 0 0 70px 40px; position: absolute; left: 0; bottom: 0; z-index: 5;}
+.about .inner .la .sl_wrap .swiper-slide ul li .tit{padding: 0 0 70px 40px; position: absolute; left: 0; bottom: 0; z-index: 5;} */
 
 
+.about .inner .ra{width: 50%; height: 1965px; transition: 0.85s ease-in;}
+.about .inner .ra:after{content: ''; display: block; visibility: hidden; clear: both;}
+.about .inner .ra .sl_wrap{float: right; width: 840px; height: 1060px; position: sticky; top: 0;}
+.about .inner .ra .sl_wrap .swiper-container{width: 100%; height: 100%;}
+.about .inner .ra .sl_wrap .swiper-slide{position: relative;}
+.about .inner .ra .sl_wrap .swiper-slide .bg{position: absolute; right: 0; top: 0; z-index: 4;}
+.about .inner .ra .sl_wrap .swiper-slide .ceo{
+    position: absolute; top: 0; left: 0; z-index: 5; opacity: 0;
+    transform: translate(100px, 110px); transition: 0.75s ease-in-out 0.25s;
+}
+.about .inner .ra .sl_wrap .swiper-slide-active .ceo{
+    opacity: 1; transform: translate(0, 110px);
+}
 
-
-.about .inner .ra{width: 50%;}
-
-.about .inner .ra .visual{width: 100%; position: relative; text-align: right;}
+/* .about .inner .ra .visual{width: 100%; position: relative; text-align: right;}
 .about .inner .ra .visual .ceo{
     position: absolute; top: 0; left: 0; z-index: 5;
     transform: translate(120px ,110px);
-}
-.about .inner .ra .visual .paging{
+} */
+.about .inner .ra .paging{
+    width: 410px; height: 350px; padding: 70px 0 0 100px; background: #fff;
     position: absolute; bottom: 0; right: 0; z-index: 10;
-    transform: translate(0, 190px);
 }
+.about .inner .ra .paging .swiper-pagination{font-family: "Nunito Sans"; font-size: 14px; font-weight: 700; line-height: 1;}
+.about .inner .ra .paging .swiper-pagination .swiper-pagination-bullet{display: block; width: auto; height: auto; margin-bottom: 40px; background: none; position: relative;}
+.about .inner .ra .paging .swiper-pagination .swiper-pagination-bullet-active:after{
+    content: ''; display: block; width: 55px; height: 2px;
+    position: absolute; right: -100px; top: 5px; z-index: 5;
+    background: #95abb3;
+}
+.about .inner .ra .paging .swiper-pagination .swiper-pagination-bullet:last-child{margin-bottom: 0;}
+
+
+.company{display: block; width: 100%; padding: 75px 0 410px;}
+.company .inner{max-width: 1400px; width: 100%; margin: 0 auto;}
+.company .inner ul{display: block; width: 100%;}
+.company .inner ul:after{content: ''; display: block; visibility: hidden; clear: both;}
+
+.company .inner ul li{float: left; width: 50%; position: relative; transition: 0.35s ease-in;}
+.company .inner ul:hover li{transform: translate(0, 0) !important;}
+
+.company .inner ul li .visual{width: 100%; height: 100%; position: relative; overflow: hidden;}
+.company .inner ul li .visual .dim{
+    width: 100%; height: 100%; background: rgba(0, 0, 0, 0.3);
+    position: absolute; left: 0; top: 0; z-index: 0;
+    opacity: 0; transition: opacity 0.35s ease-in;
+}
+.company .inner ul li .visual img{width: 100%; transition: 0.5s ease-in;}
+.company .inner ul li:hover .visual img{transform: scale(1.1);}
+.company .inner ul li:hover .visual .dim{opacity: 1;}
+
+.company .inner ul li .desc{display:inline-block; position: absolute; z-index: 5;}
+.company .inner ul li .desc dl{display: block;}
+.company .inner ul li .desc dl dt{font-size: 60px; font-weight: 700; margin-bottom: 45px;}
+.company .inner ul li .desc dl dd{font-size: 16px; font-weight: 400; margin-bottom: 65px;}
+.company .inner ul li.customer{transform: translate(0, 30px);}
+.company .inner ul li.customer .desc{left: -140px; bottom: -40px;}
+.company .inner ul li.network{transform: translate(0, -30px);}
+.company .inner ul li.network .desc{right: -70px; top: 128px;}
+
+.company .inner ul li .desc .more_btn{display: inline-block;}
+
+.process{width: 100%; padding: 180px 0 80px; position: relative;}
+#process{background: #fff; overflow: hidden;}
+#process.active:after{width: 0; transition: width 1.6s cubic-bezier(.23,1,.32,1);}
+#process:after{position: absolute; top: 0; right: 50%; width: 50%; bottom: 0; content: ''; z-index: 4; background-color: #fff;}
+
+#process .lab-row{display: flex; height: 920px; min-height: 920px;}
+#process .lab-row .lab-col{display: flex; flex: 1 0; align-items: center; position: relative;}
+#process .lab-row .lab-col:first-child{overflow: hidden;}
+
+#process .section-bgs{position: absolute; top: 0; left: 0; right: 0; bottom: 0; overflow: hidden; background-color: #fff; transform: translateX(-50%) scale(2);}
+#process .section-bgs:after{background: rgba(0, 0, 0, 0.15); position: absolute; left: 0; top: 0; right: 0; bottom: 0; content: '';}
+#process.active .section-bgs{transition: transform 1.6s cubic-bezier(.23,1,.32,1); will-change: transform; transform: translateX(0) scale(1);}
+
+#process .section-bgs .section-bg{
+    position: absolute; top: 0; left: 0; 
+    width: 100%; height: 100%; 
+    background: 50% 50% no-repeat; background-size: cover; overflow: hidden;
+    transform: translateX(100%);
+}
+#process .section-bgs .section-bg .back{
+    position: absolute; top: 0; left: 0;
+    width: 100%; height: 100%;
+    background: 50% 50% no-repeat; background-size: cover;
+}
+
+#process .title-area .container{display: flex; flex: 1; flex-direction: column; padding-top: 295px; padding-left: 120px;}
+#process .lab-row .lab-col .container{flex: 1; width: 100%;}
+
+#process .title-area{flex: 1; height: 100%; position: relative;}
+#process .title-area .lab-title{flex: 1; position: relative; margin-bottom: 210px;}
+#process .title-area .lab-title p{
+    font-size: 48px;
+    line-height: 1.4;
+    color: #fff
+}
+#process .indices ul{display: flex;}
+#process .indices ul li{
+    margin-right: 14px;
+    flex: 1;
+    max-width: 127px;
+}
+#process .indices .index{color: #fff;}
+#process .indices .index .title{
+    opacity: 0.5;
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 14px;
+}
+#process .indices .index.active .title{opacity: 1;}
+#process .indices .index .progress{height: 2px; position: relative; background: rgba(255, 255, 255, 0.5);}
+#process .indices .index .progress .bar{
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background: #fff;
+}
+
+
+#process .lab-title{transform: translateY(20%); opacity: 0;}
+#process.active .lab-title{
+    transition: transform 1.2s cubic-bezier(.23,1,.32,1),opacity 1.2s; 
+    will-change: transform,opacity; 
+    transform: translateY(0); 
+    opacity: 1; 
+    transition-delay: 0.6s,0.6s;
+}
+
+#process .laboratories{
+    position: relative;
+    height: 100%;
+    width: 100%;
+    flex: 1;
+    transition-delay: .6s;
+    opacity: 0;
+    transform: translateY(80px);
+}
+#process.active .laboratories{
+    transition: transform 1.6s cubic-bezier(.23,1,.32,1),opacity 1.6s;
+    will-change: transform,opacity;
+    transform: translateY(0);
+    opacity: 1;
+}
+#process .lab-desc{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    z-index: 1;
+    white-space: nowrap;
+}
+#process .lab-desc.prev{z-index: 2;}
+#process .lab-desc.active{z-index: 3;}
+
+#process .lab-desc .swiper-container{opacity: 0;}
+#process .lab-desc.active .swiper-container{opacity: 1;}
+
+#process .lab-desc .desc-img{
+    font-size: 0;
+    text-align: center;
+    margin-bottom: 45px;
+}
+#process .lab-desc .desc-img .img{
+    display: block;
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto;
+    width: 480px;
+    height: 600px;
+}
+#process .lab-desc .desc-img .img .tb{
+    position: absolute;
+    bottom: 0;
+    overflow: hidden;
+    width: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    display: block;
+}
+#process .lab-desc .desc-img .img .tb img{
+    display: block;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+    transform: translateX(-50%);
+}
+#process .lab-desc h4{
+    position: absolute; top: 38%; left: 50%; z-index: 10;
+    transform: translateX(-50%) !important;
+    margin: 0; padding: 0; display: inline-block;
+    color: #fff;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 1;
+}
+#process .lab-desc p{
+    position: absolute; top: 100%; left: 50%; z-index: 10;
+    transform: translateX(-50%) !important;
+    font-size: 18px;
+    line-height: 1.6;
+    font-weight: 400;
+}
+#process .lab-desc .action{
+    display: inline-block;
+    position: absolute; left: 50%; bottom: 20%; z-index: 10;
+    transform: translateX(-50%);
+    text-align: center;
+}
+#process .indices-sm{
+    font-size: 0;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 50px;
+    white-space: nowrap;
+    display: none;
+}
+#process .indices-sm .index{
+    height: 3px;
+    width: 40px;
+    display: inline-block;
+    background: rgba(0,0,0,.2);
+    position: relative;
+    margin: 0 3px;
+}
+#process .indices-sm .index .bar{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #000;
+    display: block;
+}
+
+.inside{width: 100%; padding: 80px 120px 165px;}
+
+.inside .cont{display: block; width: 100%;}
+.inside .cont:after{content: ''; display: block; visibility: hidden; clear: both;}
+.inside .cont .la{width: 720px; position: relative; position: sticky; top: 0;}
+
+.inside .cont .la .tit{display: block; width: 100%; text-align: left; color: #000; margin-bottom: 110px;}
+.inside .cont .la .tit h2{font-size: 48px; font-weight: 700; letter-spacing: 6px; line-height: 1; margin-bottom: 20px;}
+.inside .cont .la .tit p{font-size: 16px;}
+.inside .cont .la .tit p.mid{font-weight: 700; line-height: 1; margin-bottom: 40px;}
+.inside .cont .la .tit p.bot{line-height: 1.8;}
+
+.inside .cont .la .desc{
+    display: inline-block; padding: 0 0 70px 40px;
+    position: absolute; left: 0; bottom: 0; z-index: 5;
+    color: #fff;
+}
+.inside .cont .la .desc dt{font-size: 40px; font-weight: 700; line-height: 1; margin-bottom: 35px;}
+.inside .cont .la .desc dd{font-size: 18px; font-weight: 400; line-height: 1.6;}
+
+.inside .cont .ra{width: 760px; padding-top: 455px;}
+.inside .cont .ra:after{content: ''; display: block; visibility: hidden; clear: both;}
+.inside .cont .ra li{float: left; margin-bottom: 125px;}
+.inside .cont .ra li:nth-child(odd){margin-right: 80px;}
+.inside .cont .ra li:nth-child(3),
+.inside .cont .ra li:nth-child(4){margin-bottom: 0;}
+
+.inside .cont .ra li > img{margin-bottom: 40px;}
+.inside .cont .ra li dl dt{margin-bottom: 25px;}
+
 
 
 /* animation keyframes */
@@ -368,3 +650,5 @@ main{width: 100%; max-width: 1920px; margin: 0 auto;}
         color: #ffffff;
     }
 }
+
+
