--- a/type_B/resources/css/main.css
+++ b/type_B/resources/css/main.css
@@ -6,9 +6,9 @@ main{width: 100%;}
 .wrap .main_vsl{width: 100%; height: 1000px; position: relative;}
 .wrap .main_vsl .sl_wrap{width: 100%; height: 100%;}
 .wrap .main_vsl .sl_wrap .swiper-slide{width: 100%; height: 100%; background-size: cover; position: relative;}
-.wrap .main_vsl .sl_wrap .swiper-slide:first-child{background: url('../images/main_vsl_bg.png')no-repeat 0 0;}
-.wrap .main_vsl .sl_wrap .swiper-slide:nth-child(2){background: url('../images/main_vsl_02_bg.png')no-repeat 0 0;}
-.wrap .main_vsl .sl_wrap .swiper-slide:nth-child(3){background: url('../images/main_vsl_03_bg.png')no-repeat 0 0;}
+.wrap .main_vsl .sl_wrap .swiper-slide:nth-child(2){background: url('../images/main_vsl_bg.png')no-repeat 0 0;}
+.wrap .main_vsl .sl_wrap .swiper-slide:nth-child(3){background: url('../images/main_vsl_02_bg.png')no-repeat 0 0;}
+.wrap .main_vsl .sl_wrap .swiper-slide:nth-child(4){background: url('../images/main_vsl_03_bg.png')no-repeat 0 0;}
 
 .wrap .main_vsl .sl_wrap .swiper-slide .desc{
     position: absolute; left: 420px; top: 340px; z-index: 10;
@@ -16,6 +16,7 @@ main{width: 100%;}
 .wrap .main_vsl .sl_wrap .swiper-slide .desc dt{margin-bottom: 50px;}
 
 .wrap .main_vsl .sl_wrap .swiper-pagination{width: auto; bottom: 540px; left: -60px; transform: rotate(-90deg);}
+.wrap .main_vsl .sl_wrap .swiper-pagination span:first-child{display: none;}
 .wrap .main_vsl .sl_wrap .swiper-pagination-bullet{
     width: auto; height: auto; margin: 0 65px 0 0; padding-bottom: 5px;
     border-radius:0; background: none;
