--- a/type_A/resources/css/sub.css
+++ b/type_A/resources/css/sub.css
@@ -10,15 +10,17 @@ main{width: 100%;}
     background-image: url('../images/product/main_vsl_bg_01.png');
     background-repeat: no-repeat;
     background-size: cover;
+    transition: 0.6s ease-in-out;
 }
 .vsl .inner{display: block; width: auto; height: 100%; position: absolute; right: 0; top: 0; z-index: 0;}
 .vsl .inner:after{content: ''; display: block; visibility: hidden; clear: both;}
 .vsl .inner .cont{display: block; width: auto; height: 100%; float: left; position: relative; padding: 444px 101px 0; box-sizing: border-box;}
 .vsl .inner .cont h2{font-size: 96px; font-weight: 300; line-height: 1; color: #fff; opacity: 0.5; cursor: pointer; position: relative; z-index: 10;}
 .vsl .inner .cont h2.active{opacity: 1;}
-.vsl .inner .cont.clean h2.active + span{background:url('../images/product/main_vsl_clean_bg.png')}
-.vsl .inner .cont.photo h2.active + span{background:url('../images/product/main_vsl_photo_bg.png')}
-.vsl .inner .cont.etch h2.active + span{background:url('../images/product/main_vsl_etch_bg.png')}
+.vsl .inner .cont h2.active + span{transition: background 0.35s ease-in-out;}
+.vsl .inner .cont.clean h2.active + span{background:url('../images/product/main_vsl_clean_bg.png')no-repeat 0 0; background-size: 100%;}
+.vsl .inner .cont.photo h2.active + span{background:url('../images/product/main_vsl_photo_bg.png')no-repeat 0 0; background-size: 100%;}
+.vsl .inner .cont.etch h2.active + span{background:url('../images/product/main_vsl_etch_bg.png')no-repeat 0 0; background-size: 100%;}
 .vsl .inner .cont span{display: block; width: 100%; height: 100%; position: absolute; left: 0; top: 0; z-index: 5;}
 /* .vsl ul{width: auto; height: 100%; position: absolute; right: 0; top: 0; z-index: 10;}
 .vsl ul:after{content: ''; display: block; visibility: hidden; clear: both;}
