--- a/type_A/resources/css/sub.css
+++ b/type_A/resources/css/sub.css
@@ -5,7 +5,7 @@ main{width: 100%;}
 .ns{font-family: "Nunito Sans" !important;}
 
 .vsl{
-    width: 100%; height: 1000px;
+    width: 100%; height: 100vh;
     position: relative;
     background-image: url('../images/product/main_vsl_bg_01.png');
     background-repeat: no-repeat;
@@ -18,15 +18,68 @@ main{width: 100%;}
 .vsl .inner .cont h2{font-size: 96px; font-weight: 300; line-height: 1; color: #fff; opacity: 0.5; cursor: pointer; position: relative; z-index: 10;}
 .vsl .inner .cont h2.active{opacity: 1;}
 .vsl .inner .cont h2.active + span{transition: background 0.35s ease-in-out;}
-.vsl .inner .cont.clean h2.active + span{background:url('../images/product/main_vsl_clean_bg.png')no-repeat 0 0; background-size: 100%;}
-.vsl .inner .cont.photo h2.active + span{background:url('../images/product/main_vsl_photo_bg.png')no-repeat 0 0; background-size: 100%;}
-.vsl .inner .cont.etch h2.active + span{background:url('../images/product/main_vsl_etch_bg.png')no-repeat 0 0; background-size: 100%;}
+.vsl .inner .cont.clean h2.active + span{background:url('../images/product/main_vsl_clean_bg.png')no-repeat 0 0; background-size: cover;}
+.vsl .inner .cont.photo h2.active + span{background:url('../images/product/main_vsl_photo_bg.png')no-repeat 0 0; background-size: cover;}
+.vsl .inner .cont.etch h2.active + span{background:url('../images/product/main_vsl_etch_bg.png')no-repeat 0 0; background-size: cover;}
 .vsl .inner .cont span{display: block; width: 100%; height: 100%; position: absolute; left: 0; top: 0; z-index: 5;}
-/* .vsl ul{width: auto; height: 100%; position: absolute; right: 0; top: 0; z-index: 10;}
-.vsl ul:after{content: ''; display: block; visibility: hidden; clear: both;}
-.vsl ul li{display: block; float: left; width: auto; height: 100%; padding: 444px 102px 0; box-sizing: border-box; }
-.vsl ul li a{display: inline-block; font-size: 96px; font-weight: 300; line-height: 1; color: #fff; opacity: 0.5; cursor: pointer;}
-.vsl ul li a:hover{opacity: 1;} */
+.vsl .visit{display: block; width: 48px; height: 48px; position: absolute; right: 25px; bottom: 40px; z-index: 10;}
+.vsl .visit img{width: 100%;}
+.vsl .scrollBtn{
+    position: absolute; left: 50%; bottom: 10px; z-index: 10;
+    width: auto;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transform: translate(-50%, -50%);
+    /* opacity: 0; transform: translateY(100px); */
+}
+/* .on #mainPage .scrollBtn{opacity: 1; transform: translateY(0); transition: all 1.2s ease-in-out;} */
+.vsl .scrollBtn .txt {
+    font-family: "Nunito Sans";
+    font-size: 12px; font-weight: 600;
+    margin-bottom: 20px;
+    letter-spacing: 3px;
+    text-indent: 5px;
+    color: #ffffff;
+    animation: colorText 5s ease-out infinite, nudgeText 5s ease-out infinite;
+}
+
+.vsl .scrollBtn .mouse {
+    background: transparent;
+    position: relative;
+    width: 20px;
+    height: 40px;
+    background-size: 100% 100%;
+    border-radius: 100px;
+    background-size: 225%;
+    border: 2px solid #fff;
+    animation: nudgeMouse 5s ease-out infinite;
+}
+.vsl .scrollBtn .mouse:before,.scrollBtn .mouse:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+}
+.vsl .scrollBtn .mouse:before {
+    width: 20px;
+    height: 40px;
+    background-color: #222a30;
+    opacity: .1;
+    border-radius: 100px;
+}
+.vsl .scrollBtn .mouse:after {
+    background-color: #ffffff;
+    width: 4px;
+    height: 4px;
+    border-radius: 100%;
+    animation: trackBallSlide 5s linear infinite;
+}
 
 .sect_02{
     width: 100%; padding: 160px 0 130px 530px; 
@@ -38,6 +91,7 @@ main{width: 100%;}
     position: absolute; left: -30px; top: -90px; z-index: 5;
     background: #000;
 }
+.sect_02 .move.active{transition-delay: 0.45s !important;}
 
 .sect_03{
     width: 100%; min-height: 600px; overflow: hidden;
@@ -51,18 +105,35 @@ main{width: 100%;}
 
 .sect_04{width: 100%; padding: 290px 0 35px;}
 .sect_04 .tit{width: 100%; display: block; text-align: center;}
-.sect_04 .tit:after{content: ''; display: block; width: 1px; height: 120px; margin:50px auto 0; background-color: #000;}
-.sect_04 .tit h2{margin-bottom: 30px; font-size: 48px; font-weight: 700; line-height: 1; letter-spacing: 3px; color: #000;}
+.sect_04 .tit h2{margin-bottom: 30px; font-size: 48px; font-weight: 700; line-height: 1; letter-spacing: 10px; color: #000;}
 .sect_04 .tit p{font-size: 18px; font-weight: 700; line-height: 1; color: #000;}
+.sect_04 .tit p:after{content: ''; display: block; width: 1px; height: 120px; margin:50px auto 0; background-color: #000;}
 
 .equip{width: 100%; height: 1000px;}
 .equip .sl_wrap{width: 100%; height: 100%;}
-.equip .sl_wrap .swiper-container{width: 100%; height: 100%;}
+.equip .sl_wrap .swiper-container{width: 100%; height: 100%; position: relative;}
+.equip .sl_wrap .swiper-container .tit{position: absolute; left: 180px; top: 80px; z-index: 10;}
+.equip .sl_wrap .swiper-container .swiper-pagination{
+    width: auto; height: 52px; display: block; border-radius: 50px; box-sizing: border-box; border: 2px solid #d0d0d0;
+    position: absolute; top: 60px; left: 50%; right: unset; z-index: 10;
+    transform: translateX(-50%);
+}
+.equip .sl_wrap .swiper-container .swiper-pagination .swiper-pagination-bullet{
+    width: auto; height: auto; display: inline-block; margin: 0; padding: 17px 26px;
+    font-family: "Nunito Sans !important"; font-size: 14px; font-weight: 700; color: #666666; line-height: 1;
+    background: none; opacity: 1; border-radius: 50px;
+}
+.equip .sl_wrap .swiper-pagination-bullet.swiper-pagination-bullet-active{background: #838990 !important; color: #fff !important;}
+.equip .sl_wrap .swiper-container .req_btn{position: absolute; right: 40px; bottom: 40px; z-index: 10; cursor: pointer;}
+
 .equip .sl_wrap .swiper-container .swiper-slide{
     width: 100%; height: 1000px; padding: 397px 0 0 180px;
-    position: relative; background: url('../images/product/slide_bg.png')no-repeat 0 0; background-size: cover;
+    position: relative;  background-size: cover;
 }
-.equip .sl_wrap .swiper-container .swiper-slide .tab{width: 100%; display: block; position: absolute; top: 60px; left: 180px; z-index: 10;}
+.equip .sl_wrap .swiper-container .swiper-slide:nth-child(odd){background: url('../images/product/slide_bg.png')no-repeat 0 0;}
+.equip .sl_wrap .swiper-container .swiper-slide:nth-child(even){background: #fff;}
+
+
 .equip .sl_wrap .swiper-container .swiper-slide .info_btn{position: absolute; left: 40px; bottom: 40px; z-index: 10; cursor: pointer;}
 .equip .sl_wrap .swiper-container .swiper-slide .info_btn .close1{display: none; position: absolute; left: 0; bottom: 0; z-index: 10; cursor: pointer;}
 .equip .sl_wrap .swiper-container .swiper-slide .info_btn .close2{display: none; position: absolute; left: 0; bottom: 0; z-index: 10; cursor: pointer;}
@@ -70,12 +141,59 @@ main{width: 100%;}
 .equip .sl_wrap .swiper-container .swiper-slide .info_btn .close4{display: none; position: absolute; left: 0; bottom: 0; z-index: 10; cursor: pointer;}
 .equip .sl_wrap .swiper-container .swiper-slide .info_btn .pop{display: none; position: absolute; left: 0; bottom: 55px; z-index: 10;}
 
-.equip .sl_wrap .swiper-container .swiper-slide .req_btn{position: absolute; right: 40px; bottom: 40px; z-index: 10; cursor: pointer;}
 
-.equip .sl_wrap .swiper-container .swiper-slide .desc{display: block;}
-.equip .sl_wrap .swiper-container .swiper-slide .desc dl dt{display:block; margin-bottom: 62px;}
-.equip .sl_wrap .swiper-container .swiper-slide .desc .bro_btn{display:block; margin-top: 57px;}
-.equip .sl_wrap .swiper-container .swiper-slide .visual{display: block; width: 1160px; position: absolute; top: 0; right: 0; z-index: 5;}
+.equip .sl_wrap .swiper-container .swiper-slide .desc{
+    display: block; opacity: 0; transform: translateX(-150px); transition: 1.2s ease-in-out;
+}
+.equip .sl_wrap .swiper-container .swiper-slide-active .desc{
+    opacity: 1; transform: translateX(0);
+}
+.equip .sl_wrap .swiper-container .swiper-slide-prev .desc{
+    opacity: 0; transform: translate(0, -140px); transition: 1.4s ease-in-out;
+}
+
+.equip .sl_wrap .swiper-container .swiper-slide .desc dl dt{
+    display:block; margin-bottom: 62px; 
+    opacity: 0; transform: translateX(-120px);
+    transition: 1.2s ease-in-out 0.3s;
+}
+.equip .sl_wrap .swiper-container .swiper-slide-active .desc dl dt{
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.equip .sl_wrap .swiper-container .swiper-slide .desc dl dd{
+    opacity: 0; transform: translateX(-120px);
+    transition: 1.2s ease-in-out 0.5s;
+}
+.equip .sl_wrap .swiper-container .swiper-slide-active .desc dl dd{
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.equip .sl_wrap .swiper-container .swiper-slide .desc .bro_btn{
+    display:block; margin-top: 57px; 
+    opacity: 0; 
+    transform: translateX(-120px);
+    transition: 1.2s ease-in-out 0.7s;
+
+}
+.equip .sl_wrap .swiper-container .swiper-slide-active .desc .bro_btn{
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
+.equip.move.active .sl_wrap .swiper-container .swiper-slide .visual{
+    display: block; width: 1160px; position: absolute; top: 0; right: 0; z-index: 5;
+    opacity: 0; transform: translateX(200px); transition: 1.6s ease-in-out;
+}
+.equip.move.active .sl_wrap .swiper-container .swiper-slide-active .visual{
+    opacity: 1; transform: translateX(0);
+}
+.equip.move.active .sl_wrap .swiper-container .swiper-slide-prev .visual{
+    opacity: 0; transform: translate(0, -140px); transition: 1.6s ease-in-out;
+}
 
 .sect_06{
     width: 100%; height: 220px; overflow: hidden; position: relative;
@@ -89,50 +207,210 @@ main{width: 100%;}
 .sect_06 ul:after{content: ''; display: block; visibility: hidden; clear: both;}
 .sect_06 ul li{float: left; width: 50%; height: 100%; padding-top: 96px; text-align: center; box-sizing: border-box;}
 .sect_06 ul li a{display: block;}
-/* .equip .sl_wrap01{width: 100%; height: 100%; position: relative;}
-.equip .sl_wrap01 .sc_tab{position: absolute; left: 180px; top: 60px; z-index: 10;}
-.equip .sl_wrap01 .req{position: absolute; bottom: 40px; right: 40px; z-index: 10;}
-.equip .sl_wrap01 .info_btn{position: absolute; left: 40px; bottom: 40px; z-index: 10;}
 
-.swiper-button-next.out_sl, .swiper-button-prev.out_sl{color: #000 !important;}
-.swiper-button-next.swiper-button-disabled.out_sl, .swiper-button-prev.swiper-button-disabled.out_sl{opacity: 0;}
 
-.equip .sl_wrap01 .swiper-pagination{width: auto; bottom: 60px; left: 180px; z-index: 10;}
-.equip .sl_wrap01 .swiper-pagination-bullet{
-    width: auto; height: auto; margin: 0 20px 0 0; padding: 20px 100px 0 0;
-    border-radius:0; background: none; border-top: 2px solid #000;
-    font-size: 16px; font-weight: 700; line-height: 1; color: #000;
+.move{opacity: 0; transform: translateY(130px);}
+.move.right{opacity: 0; transform: translateX(150px);}
+.move.left{opacity: 0; transform: translateX(-150px);}
+.move.left.active{
+    opacity:1 !important;
+    transform:translateX(0) !important;
+    -webkit-transform:translateX(0);
+    -ms-transform:translateX(0);
+    transition:all 1.2s !important;
+    -webkit-transition:all 1.2s;
+    -ms-transition:all 1.2s;
 }
-.equip .sl_wrap01 .swiper-pagination-bullet-active{border-radius: 0;}
+.move.right.active{
+    opacity:1 !important;
+    transform:translateX(0) !important;
+    -webkit-transform:translateX(0);
+    -ms-transform:translateX(0);
+    transition:all 1.2s !important;
+    -webkit-transition:all 1.2s;
+    -ms-transition:all 1.2s;
+}
+.move.active{
+    opacity:1 !important;
+    transform:translateY(0) !important;
+    -webkit-transform:translateY(0);
+    -ms-transform:translateY(0);
+    transition:all 1.2s !important;
+    -webkit-transition:all 1.2s;
+    -ms-transition:all 1.2s;
+}
 
-.equip .sl_wrap01 .swiper-container{width: 100%; height: 100%;}
-.equip .sl_wrap01 .swiper-container .swiper-slide{width: 100%; height: 100%; position: relative;}
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_01{background: url('../images/product_slide_01_bg.png')no-repeat 0 0; background-size: cover;}
-
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_01 .inner{display: block;}
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_01 .inner:after{content: ''; display: block; visibility: hidden; clear: both;}
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_01 .inner .desc{display: block; padding: 395px 0 0 180px;}
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_01 .inner .desc dl{display: inline-block; margin-bottom: 55px;}
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_01 .inner .desc dl dt{margin-bottom: 60px;}
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_01 .inner .desc .bro{display: block;}
-
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_02{background: url('../images/product_slide_01_sc02_bg.png')no-repeat 0 0; background-size: cover;}
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_02 .desc{position: absolute; top: 205px; left: 235px; z-index: 10;}
-
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_03 .sl_03_wrap{width: 1740px; position: absolute; right: 0; top: 217px; z-index: 10;}
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_03 .sl_03_wrap .swiper-container .swiper-slide{width: 560px !important; height: auto !important;}
-
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_03 .sl_03_wrap .in_sl_paging{width: 96px; height: 12px; position: absolute; bottom: -45px; right: 78px; z-index: 15;}
-
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_03 .sl_03_wrap .in_sl_paging .swiper-button-next,
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_03 .sl_03_wrap .in_sl_paging .swiper-button-prev{display: block; width: 31px; height: 12px; top: 22px;}
-
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_03 .sl_03_wrap .in_sl_paging .swiper-button-next{right: 0;}
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_03 .sl_03_wrap .in_sl_paging .swiper-button-prev{left: 0;}
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_03 .sl_03_wrap .in_sl_paging .swiper-button-prev:after{transform: rotate(180deg);}
-
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_03 .sl_03_wrap .in_sl_paging .swiper-button-next:after,
-.equip .sl_wrap01 .swiper-container .swiper-slide.sl_03 .sl_03_wrap .in_sl_paging .swiper-button-prev:after{
-    content: ''; display: block; width: 31px; height:12px;
-    background: url('../images/product_slide_01_sc03_right_arrow.png')no-repeat 0 0; background-size: 100%;
-} */
+footer{width: 100%; position: relative;}
+footer img{width: 100%;}
+footer .top_btn{position: absolute; width: 48px; height: 48px; cursor: pointer; right: 24px; top: -68px; z-index: 10;}
+/* animation keyframes */
+@keyframes colorSlide {
+    0% {
+        background-position: 0% 100%;
+    }
+    20% {
+        background-position: 0% 0%;
+    }
+    21% {
+        background-color: transparent;
+    }
+    29.99% {
+        background-color: #ffffff;
+        background-position: 0% 0%;
+    }
+    30% {
+        background-color: transparent;
+        background-position: 0% 100%;
+    }
+    50% {
+        background-position: 0% 0%;
+    }
+    51% {
+        background-color: transparent;
+    }
+    59.99% {
+        background-color: #ffffff;
+        background-position: 0% 0%;
+    }
+    60% {
+        background-color: transparent;
+        background-position: 0% 100%;
+    }
+    80% {
+        background-position: 0% 0%;
+    }
+    81% {
+        background-color: transparent;
+    }
+    89.99%, 100% {
+        background-color: #ffffff;
+    }
+}
+@keyframes trackBallSlide {
+    0% {
+        opacity: 1;
+        transform: scale(1) translateY(-10px);
+    }
+    6% {
+        opacity: 1;
+        transform: scale(0.9) translateY(5px);
+    }
+    14% {
+        opacity: 0;
+        transform: scale(0.4) translateY(20px);
+    }
+    15%, 19% {
+        opacity: 0;
+        transform: scale(0.4) translateY(-10px);
+    }
+    28%, 29.99% {
+        opacity: 1;
+        transform: scale(1) translateY(-10px);
+    }
+    30% {
+        opacity: 1;
+        transform: scale(1) translateY(-10px);
+    }
+    36% {
+        opacity: 1;
+        transform: scale(0.9) translateY(5px);
+    }
+    44% {
+        opacity: 0;
+        transform: scale(0.4) translateY(20px);
+    }
+    45%, 49% {
+        opacity: 0;
+        transform: scale(0.4) translateY(-10px);
+    }
+    58%, 59.99% {
+        opacity: 1;
+        transform: scale(1) translateY(-10px);
+    }
+    60% {
+        opacity: 1;
+        transform: scale(1) translateY(-10px);
+    }
+    66% {
+        opacity: 1;
+        transform: scale(0.9) translateY(5px);
+    }
+    74% {
+        opacity: 0;
+        transform: scale(0.4) translateY(20px);
+    }
+    75%, 79% {
+        opacity: 0;
+        transform: scale(0.4) translateY(-10px);
+    }
+    88%, 100% {
+        opacity: 1;
+        transform: scale(1) translateY(-10px);
+    }
+}
+@keyframes nudgeMouse {
+    0% {
+        transform: translateY(0);
+    }
+    20% {
+        transform: translateY(8px);
+    }
+    30% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(8px);
+    }
+    60% {
+        transform: translateY(0);
+    }
+    80% {
+        transform: translateY(8px);
+    }
+    90% {
+        transform: translateY(0);
+    }
+}
+@keyframes nudgeText {
+    0% {
+        transform: translateY(0);
+    }
+    20% {
+        transform: translateY(2px);
+    }
+    30% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(2px);
+    }
+    60% {
+        transform: translateY(0);
+    }
+    80% {
+        transform: translateY(2px);
+    }
+    90% {
+        transform: translateY(0);
+    }
+}
+@keyframes colorText {
+    21% {
+        color: #4e5559;
+    }
+    30% {
+        color: #ffffff;
+    }
+    51% {
+        color: #4e5559;
+    }
+    60% {
+        color: #ffffff;
+    }
+    81% {
+        color: #4e5559;
+    }
+    90% {
+        color: #ffffff;
+    }
+}
