--- a/type_B/resources/css/sub.css
+++ b/type_B/resources/css/sub.css
@@ -1,8 +1,9 @@
 body{width: 100%; max-width: 1920px; margin: 0 auto; font-family: "Noto sans CJK KR";}
 .wrap{width: 100%; max-width: 1920px; margin: 0 auto; position: relative; z-index: 0;}
 .wrap main{width: 100%;}
-footer{width: 100%; max-width: 1920px; margin: 0 auto;}
+footer{width: 100%; position: relative;}
 footer img{width: 100%;}
+footer .top_btn{position: absolute; width: 48px; height: 48px; cursor: pointer; right: 24px; top: -68px; z-index: 10;}
 .fl{float: left;}
 .fr{float: right;}
 
@@ -55,6 +56,7 @@ footer img{width: 100%;}
 
 .wrap header .gnb ul > li .depth02 > ul > li ol li{padding: 20px 0 0 0; font-size: 18px; font-weight: 700; line-height-step: 1; cursor: pointer; color: #000;}
 .wrap header .gnb ul > li .depth02 > ul > li ol li:hover{color: #067bcd;}
+.wrap header .gnb ul > li .depth02 > ul > li ol li > a{padding-bottom: 0; border-bottom: none;}
 
 .wrap header .util{display:block; padding-top: 5px;}
 .wrap header .util ul:after{content: ''; display: block; visibility: hidden;  clear: both;}
@@ -98,11 +100,17 @@ footer img{width: 100%;}
 
 .wrap main .sect_04 .cont_wrap li.cont_01 .desc{margin: 120px 0 0 250px;}
 .wrap main .sect_04 .cont_wrap li.cont_02 .desc{margin: 195px 250px 0 0;}
-.wrap main .sect_04 .cont_wrap li.cont_02 .vsl{transform: translateY(-80px);}
+.wrap main .sect_04 .cont_wrap li.cont_02 .vsl{transform: translate(0,-80px);}
+.wrap main .sect_04 .cont_wrap li.cont_02 .vsl.move.left{
+    transform: translate(-100px, -80px) !important;
+}
+.wrap main .sect_04 .cont_wrap li.cont_02 .vsl.move.active{
+    transform: translate(0, -80px) !important;
+}
 
 .wrap main .sect_05{
     width: 100%; height: 1000px; position: relative; 
-    padding: 98px 0 0 270px;
+    padding: 98px 0 0 270px; margin-bottom: 300px;
     background: url('../images/product/sect_05_bg.png')no-repeat 0 0; 
     background-size: cover;
 }
@@ -117,3 +125,35 @@ footer img{width: 100%;}
 .wrap main .sect_05 .sl_wrap .swiper-pagination{width: 740px; height: 4px; bottom: 50px; right: 220px; top: unset; z-index: 10;}
 .wrap main .sect_05 .sl_wrap .swiper-pagination-progressbar{background: rgba(0, 0, 0, 0.2);}
 .wrap main .sect_05 .sl_wrap .swiper-pagination-progressbar .swiper-pagination-progressbar-fill{background: #0058a7;}
+
+
+.move{opacity: 0; transform: translateY(130px);}
+.move.right{opacity: 0; transform: translateX(150px);}
+.move.left{opacity: 0; transform: translateX(-150px);}
+.move.left.active{
+    opacity:1 !important;
+    transform:translateX(0) !important;
+    -webkit-transform:translateX(0);
+    -ms-transform:translateX(0);
+    transition:all 1.2s !important;
+    -webkit-transition:all 1.2s;
+    -ms-transition:all 1.2s;
+}
+.move.right.active{
+    opacity:1 !important;
+    transform:translateX(0) !important;
+    -webkit-transform:translateX(0);
+    -ms-transform:translateX(0);
+    transition:all 1.2s !important;
+    -webkit-transition:all 1.2s;
+    -ms-transition:all 1.2s;
+}
+.move.active{
+    opacity:1 !important;
+    transform:translateY(0) !important;
+    -webkit-transform:translateY(0);
+    -ms-transform:translateY(0);
+    transition:all 1.2s !important;
+    -webkit-transition:all 1.2s;
+    -ms-transition:all 1.2s;
+}
